--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,10 @@
 @import"./body.css";
 @import"./links.css";
 @import"./button-icon.css";
+@import"./logo.css";
+@import"./list.css";
+@import"./menu.css";
+
 
 
 :root {
