--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,8 @@
 @import"./body.css";
 @import"./links.css";
 @import"./button-icon.css";
-@import"./logo.css";
-@import"./list.css";
-@import"./menu.css";
+@import"./sidebar.css";
+@import"./slider.css";
 
 
 
